# mnemo-cortex

./: .gitignore  CAPABILITIES.md  CHANGELOG.md  CLAUDEPILOT.md  CONTRIBUTING.md  FINDING-MNEMO.md  INSTALL-WITH-CLAUDE.md  LICENSE  MONITORING.md  PRIVACY.md  README.md  ROBOT-INFO-SPEC.md  SESSION-GUIDE.md  THE-LANE-PROTOCOL.md  agentb.yaml.example  cli.py  librarian.py  llms.txt  mnemo-dream.py  mnemo-health-check.sh  mnemo-wiki-compile.py  providers.py  pyproject.toml  refresher.py  requirements.txt  robot-install.sh  robot.info  robot.install  robot.install.md  server.py  test_agentb.py
.github/: FUNDING.yml
agentb/: __init__.py  analyst.py  cache.py  classify.py  cli.py  config.py  doctor.py  facts_store.py  health.py  migrate.py  provenance.py  providers.py  ranking.py  redact.py  server.py  sessions.py  trajectory.py  vec.py  watcher.py
docs/: cortex-stick.md  install-claude-desktop-windows.md
examples/: demo_session.jsonl
mnemo_v2/: __init__.py
passport/: README.md  __init__.py  api.py  audit.py  config.py  export.py  git_helper.py  models.py  override.py  pending.py  promotion.py  storage.py  validation.py
scripts/: wheel-smoke-test.sh
sparks_bus/: .env.example  .gitignore  A2A.md  README.md  SETUP-PROMPT.md  config.example.json  discord-channels.example.json  schema.sql  sparks-bus-watcher.py
tests/: test_agentb.py  test_analyst.py  test_capture_gate.py  test_classify.py  test_context_disk_truth_filter.py  test_context_vec_filter.py  test_dream_cap.py  test_dream_strategies.py  test_explore_mode.py  test_health_check_probe.py  test_idea_category.py  test_m_group_storage.py  test_migrate.py  (+11 more)
(+81 files in other folders)
