[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-cortex"
version = "2.3.2"
description = "Don't Fear the /new! Memory coprocessor for AI agents. SQLite-backed total recall."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Guy Hoffman", email = "guy@projectsparks.ai"},
]
keywords = ["ai", "agents", "memory", "openclaw", "llm", "coprocessor", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/GuyMannDude/mnemo-cortex"
Documentation = "https://github.com/GuyMannDude/mnemo-cortex#readme"
Repository = "https://github.com/GuyMannDude/mnemo-cortex"
Issues = "https://github.com/GuyMannDude/mnemo-cortex/issues"

[project.scripts]
mnemo-cortex = "agentb.cli:main"
mnemo = "agentb.cli:main"

[tool.setuptools.packages.find]
include = ["agentb*", "mnemo_v2*"]
